# Buzzbuzz-shopify-ops

./: .env.example  .gitignore  AGENTS.md  README.md  STATUS.md  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  listing.py  product.py  publish.py  readiness.py  seo.py
app/routes/: dashboard.py  products.py
app/schemas/: product.py
app/services/: importer.py  product_service.py
app/static/: style.css
app/templates/: base.html  dashboard.html  import.html  product_detail.html  product_form.html
chrome-extension/: README.md  manifest.json
chrome-extension/content/: content.js
chrome-extension/content/extractors/: converse-tokyo.js  montbell.js  shopify.js
chrome-extension/content/utils/: brand-map.js  image-packer.js  yaml-builder.js
chrome-extension/popup/: popup.css  popup.html  popup.js
products/_template/: product.yaml
products/converse-tokyo-allstar-10th-navy/: product.yaml
scripts/: check.py  oauth_setup.py  push.py  seed_sample.py  status.py
sourcing/: shipping-costs.yaml  top100.yaml
sourcing/radar/: README.md  candidates.md  check_trends.py  discovery-terms.json  pool.jsonl  validation-signals.md
tasks/: handoff-20260708-montbell-first-product.md  handoff-chrome-extension-v1.md  shopify-sop.html  top100-validation-sweep-plan.md  xhs-trend-monitoring-plan.md
tasks/archive/: handoff-image-variant-upload.md  workflow-sync-todo.md
