[project]
name = "buzzbuzz-shopify"
version = "0.1.0"
description = "BuzzBuzz 日本選物店 Shopify 上稿工具"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
